2019-03-07 removed autoOnOff sequencer program.

--- a/plcApp_IntLock/exampleApp/Db/Makefile
+++ b/plcApp_IntLock/exampleApp/Db/Makefile
@@ -14,7 +14,7 @@ DB += interLock.db
 DB += toCenter.db
 DB += toArchive.db
 DB += biasAll.db
-DB += autoOnOff.db
+# DB += autoOnOff.db
 #----------------------------------------------------
 # If <anyname>.db template is not named <anyname>*.template add
 # <anyname>_TEMPLATE = <templatename>
